[gd_scene load_steps=2 format=3 uid="uid://d0fgrxssym6dx"]

[ext_resource type="Script" path="res://Learning/Scripts/main.gd" id="1_mun34"]

[node name="Main" type="Node" node_paths=PackedStringArray("my_node")]
script = ExtResource("1_mun34")
my_node = NodePath("PlayerNode/GraphicsNode")

[node name="NameText" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -11.5
offset_right = 59.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "THIS IS A LABEL"
horizontal_alignment = 1

[node name="PlayerNode" type="Node2D" parent="."]

[node name="GraphicsNode" type="Sprite2D" parent="PlayerNode"]

[node name="WeaponNode" type="Sprite2D" parent="PlayerNode"]

[node name="EnemyNode" type="Node2D" parent="."]

[node name="AttackNode" type="Node2D" parent="EnemyNode"]

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = 78.0
offset_right = 116.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
text = "MONEY"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
